[package]
name = "daq-egui"
version = "0.1.0"
edition = "2021"
description = "egui-based control panel for rust-daq"

[lib]
name = "daq_egui"
path = "src/lib.rs"

[[bin]]
name = "rust-daq-gui"
path = "src/main.rs"

[[bin]]
name = "daq-rerun"
path = "src/main_rerun.rs"
required-features = ["rerun_viewer"]

[dependencies]
daq-client = { path = "../daq-client" }
# egui ecosystem (upgraded to 0.33 for Rerun 0.27.3 compatibility)
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
], optional = true }
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"], optional = true }
egui_dock = { version = "0.18", optional = true, features = ["serde"] }
egui_plot = { version = "0.34", optional = true }

# UI enhancement dependencies
egui-phosphor = { version = "0.11", optional = true }
egui-notify = { version = "0.19", optional = true }
dark-light = { version = "2.0", optional = true }

# Node graph editor
egui-snarl = { version = "0.9", features = ["serde"] }
undo = "0.52"

# Code editor for preview panel
egui_code_editor = "0.2.20"

serde = { version = "1.0", features = ["derive"] }

# Rerun for embedded viewer
rerun = { version = "0.27.3", default-features = false, features = [
    "native_viewer",
    "sdk",
    "server",
], optional = true }
mimalloc = { version = "0.1", optional = true }
# For casting pixel data bytes in gRPC streaming
bytemuck = { version = "1.14", optional = true }

# gRPC client
daq-proto = { path = "../daq-proto" }
daq-experiment = { path = "../daq-experiment" }
# LZ4 decompression for frame streaming (bd-7rk0: gRPC improvements)
lz4_flex = "0.11"
tonic = { version = "0.10", default-features = false, features = ["transport", "prost", "codegen"] }
prost = "0.12"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# Error handling and utilities
anyhow = "1.0"
tracing = "0.1"
url = "2"  # URL parsing and normalization for daemon addresses
once_cell = "1.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
serde_json = "1.0"
futures = "0.3"

# CLI parsing and daemon process management
clap = { version = "4", features = ["derive"] }
which = "6"  # Find daemon binary in PATH

# Local PVCAM driver (only needed if running daemon locally, not for gRPC streaming)
daq-core = { path = "../daq-core", optional = true }
daq-driver-pvcam = { path = "../daq-driver-pvcam", optional = true }
rfd = "0.17.2"

# Peak detection for adaptive scans
find_peaks = "0.1"

# HDF5 storage for run comparison and annotation (optional)
daq-storage = { path = "../daq-storage", optional = true }
hdf5 = { package = "hdf5-metno", version = "0.11.0", optional = true }

[features]
default = ["standalone"]
# Note: dark-light temporarily removed due to ashpd/zbus version conflict (2025-01-17)
standalone = ["dep:eframe", "dep:egui_extras", "dep:egui_dock", "dep:egui_plot", "dep:egui-phosphor", "dep:egui-notify"]
# Embedded Rerun viewer with gRPC camera streaming support
rerun_viewer = ["dep:rerun", "dep:mimalloc", "dep:bytemuck", "dep:egui_dock", "dep:egui_plot"]

# Local PVCAM driver support (for running daemon locally)
# - pvcam: enables mock mode (no SDK required)
# - pvcam_sdk: enables real hardware mode (requires PVCAM SDK)
pvcam = ["dep:daq-core", "dep:daq-driver-pvcam"]
pvcam_sdk = ["pvcam", "daq-driver-pvcam/pvcam_sdk"]
pvcam_hardware = ["pvcam_sdk"]

# HDF5 storage support for run comparison and annotation
storage_hdf5 = ["dep:hdf5", "dep:daq-storage", "daq-storage/storage_hdf5"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["egui_extras", "prost"]  # egui_extras: feature-gated; prost: used by tonic codegen
