[package]
name = "daq-plugin-example"
version = "0.1.0"
edition = "2021"
description = "Example plugin demonstrating the daq-plugin-api"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
daq-plugin-api = { path = "../daq-plugin-api" }
abi_stable = "0.11"

[lints]
workspace = true
