[package]
name = "daq-pool"
version = "0.1.0"
edition = "2021"
description = "Zero-allocation object pool for high-performance frame handling"
license = "MIT"

[dependencies]
bytes = "1.11"
crossbeam-queue = "0.3"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-test = "0.4"

[lints]
workspace = true
