[package]
name = "daq-proto"
version = "0.1.0"
edition = "2021"
description = "Protocol buffer definitions and conversions for rust-daq"

[dependencies]
daq-core = { path = "../daq-core" }
prost = "0.12"
anyhow = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.10", default-features = false, features = ["transport", "prost", "codegen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic = { version = "0.11", default-features = false, features = ["prost", "codegen"] }

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
server = []
