[package]
name = "daq-scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
daq-core = { path = "../daq-core" }
daq-hardware = { path = "../daq-hardware" }
daq-experiment = { path = "../daq-experiment" }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.36", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
chrono = "0.4"
rhai = { version = "1.19", features = ["sync"] }
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }
tracing = "0.1"
anyhow = "1.0"

[features]
default = []
python = ["dep:pyo3"]
