[package]
name = "daq-scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
daq-core = { path = "../daq-core" }
daq-hardware = { path = "../daq-hardware" }
daq-experiment = { path = "../daq-experiment" }
daq-driver-mock = { path = "../daq-driver-mock" }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.36", features = ["sync", "time", "rt", "rt-multi-thread", "macros", "signal"] }
chrono = "0.4"
rhai = { version = "1.19", features = ["sync"] }
pyo3 = { version = "0.24", features = ["auto-initialize"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Optional hardware driver dependencies for factory functions
daq-driver-thorlabs = { path = "../daq-driver-thorlabs", optional = true }
daq-driver-newport = { path = "../daq-driver-newport", optional = true }
daq-driver-spectra-physics = { path = "../daq-driver-spectra-physics", optional = true }

# Optional HDF5 support for data storage (use hdf5-metno to match daq-egui/daq-storage)
hdf5 = { package = "hdf5-metno", version = "0.11.0", optional = true }
ndarray = { version = "0.15", optional = true }

[features]
default = []
python = ["dep:pyo3"]
# HDF5 data storage from Rhai scripts
hdf5_scripting = ["dep:hdf5"]
# Marker feature for cfg guards on hardware factory functions
hardware_factories = []
# Full scripting support with all hardware drivers and HDF5 storage
# This is the RECOMMENDED feature for scripted experiments on maitai
scripting_full = [
    "hardware_factories",
    "dep:daq-driver-thorlabs",
    "dep:daq-driver-newport",
    "dep:daq-driver-spectra-physics",
    "hdf5_scripting",
]
# Alias for backwards compatibility (prefer scripting_full)
polarization = ["scripting_full"]

[[bin]]
name = "rhai-runner"
path = "src/bin/rhai_runner.rs"
required-features = ["scripting_full"]

[lints]
workspace = true
