[package]
name = "daq-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
http = "0.2"
jsonwebtoken = "9.3"
dirs = "4.0"
anyhow = "1.0"

# NOTE (bd-5bfv): Use default-features = false to prevent cascading defaults.
# Hardware features are defined in daq-hardware and re-exported here as pass-throughs.
daq-core = { path = "../daq-core" }
daq-hardware = { path = "../daq-hardware", default-features = false }
daq-storage = { path = "../daq-storage" }
daq-scripting = { path = "../daq-scripting", optional = true }
daq-proto = { path = "../daq-proto" }
daq-driver-comedi = { path = "../daq-driver-comedi", optional = true }
# LZ4 compression for frame streaming (bd-7rk0: gRPC improvements)
lz4_flex = "0.11"

tokio-serial = { version = "5.4", optional = true }
hdf5 = { package = "hdf5-metno", version = "0.11.0", optional = true }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
sha2 = "0.10"
tower-http = { version = "0.4", features = ["cors", "trace"], optional = true }
tonic-web = { version = "0.10", optional = true }
sysinfo = "0.37.2"
bincode = "1.3"
rerun = { version = "0.27.3", features = ["server"], optional = true }
daq-experiment = { version = "0.1.0", path = "../daq-experiment" }

# Metrics and monitoring (bd-v299)
prometheus = { version = "0.14", optional = true }
lazy_static = { version = "1.4", optional = true }
hyper = { version = "0.14", features = ["server", "http1", "tcp"], optional = true }

[features]
# Simplified feature flags (bd-0aqw)
default = ["modules", "server", "networking", "scripting"]
server = ["dep:tonic-web", "dep:tower-http"]
modules = []
networking = []
scripting = ["dep:daq-scripting"]
metrics = ["dep:prometheus", "dep:lazy_static", "dep:hyper"]
rerun_sink = ["dep:rerun"]

# Storage backends (pass-through to daq-storage)
storage_hdf5 = ["dep:hdf5", "daq-storage/storage_hdf5"]
storage_arrow = ["daq-storage/storage_arrow"]

# Hardware drivers (pass-through to daq-hardware)
# Canonical definitions are in daq-hardware/Cargo.toml
serial = ["dep:tokio-serial", "daq-hardware/serial"]
thorlabs = ["serial", "daq-hardware/thorlabs"]
newport = ["serial", "daq-hardware/newport"]
spectra_physics = ["serial", "daq-hardware/spectra_physics"]
newport_power_meter = ["serial", "daq-hardware/newport_power_meter"]

# PVCAM camera support
pvcam = ["serial", "daq-hardware/pvcam"]
pvcam_sdk = ["pvcam", "daq-hardware/pvcam_sdk"]
pvcam_hardware = ["pvcam_sdk"]

# Comedi DAQ support
comedi = ["dep:daq-driver-comedi", "daq-hardware/comedi"]
comedi_hardware = ["comedi", "daq-hardware/comedi_hardware"]

# All hardware drivers (with mock PVCAM)
all_hardware = ["thorlabs", "newport", "spectra_physics", "newport_power_meter", "pvcam", "comedi"]

[dev-dependencies]
config = "0.14.1"
tempfile = "3.10"
toml = "0.9.8"

[package.metadata.cargo-machete]
ignored = ["hdf5", "tokio-serial"]  # Feature-gated optional deps
