[package]
name = "daq-storage"
version = "0.1.0"
edition = "2021"
description = "High-throughput storage and buffering for rust-daq"

[dependencies]
daq-core = { path = "../daq-core" }
daq-proto = { path = "../daq-proto" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"

# Data Handling
hdf5 = { version = "0.8.1", optional = true }
arrow = { version = "57", optional = true, features = ["ipc"] }
memmap2 = "0.9"

# Async & Logging
tokio = { version = "1.36", features = ["sync", "fs"] }
log = "0.4"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.36", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
bincode = "1"

[features]
default = []
storage_hdf5 = ["dep:hdf5"]
storage_arrow = ["dep:arrow"]
networking = []

# Examples that require specific features (bd-jnfu.13)
[[example]]
name = "ring_arrow_bench"
required-features = ["storage_arrow"]
